# python_lab

./: example.txt  main.py  projectstructure.py  pyproject.toml  setup.py
SampleProject.egg-info/: PKG-INFO
ml1/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  tox.ini
ml1/.github/: ISSUE_TEMPLATE.md
ml1/docs/: Makefile  conf.py  index.rst  installation.rst  usage.rst
ml1/src/ml1/: __init__.py
ml1/tests/: test_ml1.py
my_awesome_project.egg-info/: PKG-INFO  SOURCES.txt
src/components/: dataingestion.py
